Update by Huy, date: 23/03/2017

--- a/css/dashboard2/4.css
+++ b/css/dashboard2/4.css
@@ -28,6 +28,7 @@
 }
 .type-4 .container-fluid .admin-panel .admin-title h2 small {
   margin-left: 10px;
+  font-size: 13px;
 }
 .type-4 .container-fluid .admin-panel .admin-title .filter-time {
   font-size: 13px;
