--- a/less/dashboard2/4.less
+++ b/less/dashboard2/4.less
@@ -38,6 +38,7 @@ and open the template in the editor.
                     color: @color;
                     small {
                         margin-left: 10px;
+                        font-size: @font-size;
                     }
                 }
                 .filter-time {
