--- a/less/dashboard2/6.less
+++ b/less/dashboard2/6.less
@@ -38,6 +38,7 @@ and open the template in the editor.
 
                     small {
                         margin-left: 10px;
+                        font-size: @font-size-body;
                     }
                 }
 
