--- a/less/dashboard2/5.less
+++ b/less/dashboard2/5.less
@@ -35,6 +35,7 @@ and open the template in the editor.
 
                     small {
                         margin-left: 10px;
+                        font-size: @font-size;
                     }
                 }
                 ul.sales {
