Update by Huy, date: 27/03/2017

--- a/css/e-commerce/31.css
+++ b/css/e-commerce/31.css
@@ -2,17 +2,15 @@
   color: #73879C;
 }
 .type-31 .container-fluid .content {
-  margin: 0 10px;
+  margin: 0 15px;
 }
 .type-31 .container-fluid .content .content-left {
-  margin-left: 13px;
   float: left;
 }
 .type-31 .container-fluid .content .content-left h3 {
   margin: 20px 0;
 }
 .type-31 .container-fluid .content .content-right {
-  margin-right: 13px;
   float: right;
 }
 .type-31 .container-fluid .content .content-right .input-search {
@@ -77,11 +75,12 @@
 .type-31 .container-fluid .admin-panel .admin-title ul.items .close-link {
   opacity: 1;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-img {
+.type-31 .container-fluid .admin-panel .admin-content .product-img,
+.type-31 .container-fluid .admin-panel .admin-content .product-name {
   margin-top: 15px;
 }
 .type-31 .container-fluid .admin-panel .admin-content .product-img img {
-  width: 80%;
+  max-width: 100%;
 }
 .type-31 .container-fluid .admin-panel .admin-content .product-gallery a {
   width: 100px;
@@ -93,4 +92,165 @@
 .type-31 .container-fluid .admin-panel .admin-content .product-gallery a img {
   max-width: 100%;
   margin-top: 15px;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-name {
+  border-bottom: 1px solid #e0e0e0;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info p.description {
+  padding: 25px 0;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name {
+  padding-left: 0;
+  margin-left: -5px;
+  list-style: none;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li {
+  margin: 0 10px;
+  padding: 0 5px;
+  float: left;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li p {
+  margin-bottom: 0;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color {
+  width: 25px;
+  height: 25px;
+  border: 2px solid rgba(51,51,51,0.28) !important;
+  padding: 2px;
+  border-radius: 50px;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.green {
+  background: #1ABB9C !important;
+  color: #fff;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.blue {
+  background: #3498DB !important;
+  color: #fff;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.red {
+  background: #E74C3C !important;
+  color: #fff;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.orange {
+  background: #F39C12 !important;
+  color: #fff;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size {
+  padding: 25px 0;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name {
+  padding-left: 0;
+  margin-left: -5px;
+  list-style: none;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li {
+  margin: 0;
+  padding: 0 5px;
+  float: left;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li a.btn-size {
+  margin-bottom: 5px;
+  margin-right: 5px;
+  color: #333;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  text-decoration: none;
+  padding: 1px 5px;
+  border-radius: 3px;
+  font-size: 12px;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li a.btn-size:hover {
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-price {
+  margin-top: 50px;
+  padding: 5px 10px;
+  background-color: #FFF;
+  text-align: left;
+  border: 2px dashed #E0E0E0;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-price .price {
+  color: #26B99A;
+  margin: 0;
+  font-weight: 400;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-price .price-tax {
+  font-size: 18px;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-btnadd {
+  margin-top: 25px;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-btnadd .add-to-cart {
+  margin-bottom: 5px;
+  margin-right: 5px;
+  color: #333;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 10px 16px;
+  border-radius: 5px;
+  font-size: 18px;
+  text-decoration: none;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-btnadd .add-to-cart:hover {
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social {
+  margin-top: 35px;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social {
+  padding-left: 0;
+  margin-left: -5px;
+  list-style: none;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li {
+  float: left;
+  padding: 0 4px;
+  margin: 0;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a {
+  color: #5A738E;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a i {
+  font-size: 35px;
+}
+.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a:hover {
+  color: #337ab7;
+}
+.type-31 .container-fluid .admin-panel .admin-content ul.nav-tabs {
+  margin-top: 25px;
+  padding-left: 10px;
+  background: #F5F7FA;
+}
+.type-31 .container-fluid .admin-panel .admin-content ul.nav-tabs li {
+  color: #333 !important;
+  background: #F5F7FA;
+  border-bottom: none;
+  border-radius: 4px 4px 0 0;
+}
+.type-31 .container-fluid .admin-panel .admin-content ul.nav-tabs li a {
+  color: #5A738E;
+}
+.type-31 .container-fluid .admin-panel .admin-content .tab-content {
+  padding: 10px 0;
+}
+.ul-temp {
+  padding-left: 0;
+  margin-left: -5px;
+  list-style: none;
+}
+.a-temp {
+  text-decoration: none;
+}
+@media (max-width: 980px) {
+  .content .content-left h3 {
+    font-size: 16px;
+  }
+  .content .content-right {
+    margin-top: -5px;
+  }
+  .product-name h3 {
+    display: inline-block;
+  }
 }
