--- a/less/e-commerce/31.less
+++ b/less/e-commerce/31.less
@@ -12,9 +12,8 @@ and open the template in the editor.
     color: #73879C;
     .container-fluid {
         .content {
-            margin: 0 10px;
+            margin: 0 15px;
             .content-left {
-                margin-left: 13px;
                 float: left;
                 h3 {
                     margin: 20px 0;
@@ -22,7 +21,6 @@ and open the template in the editor.
                 }
             }
             .content-right {
-                margin-right: 13px;
                 float: right;
                 .input-search {
                     margin-top: 22px;
@@ -90,11 +88,12 @@ and open the template in the editor.
                 }
             }
             .admin-content {
-                .product-img {
+                .product-img, .product-name {
                     margin-top: 15px;
-
+                }
+                .product-img {
                     img {
-                        width: 80%;
+                        max-width: 100%;
                     }
                 }
                 .product-gallery {
@@ -110,7 +109,175 @@ and open the template in the editor.
                         }
                     }
                 }
+                .product-name {
+                    border-bottom: 1px solid #e0e0e0;
+                }
+                .product-info {
+                    p.description {
+                        padding: 25px 0;
+                    }
+
+                    .product-color {
+                        ul.color-name {
+                            .ul-temp;
+                            li {
+                                margin: 0 10px; 
+                                padding: 0 5px;
+                                float: left;
+                                p {
+                                    margin-bottom: 0;
+                                }
+                                .color {
+                                    width: 25px;
+                                    height: 25px;
+                                    border: 2px solid rgba(51,51,51,.28)!important;
+                                    padding: 2px;
+                                    border-radius: 50px;
+                                }
+                                .color.green {
+                                    background: #1ABB9C!important;
+                                    color: #fff;
+                                }
+                                .color.blue {
+                                    background: #3498DB!important;
+                                    color: #fff;
+                                }
+                                .color.red {
+                                    background: #E74C3C!important;
+                                    color: #fff;
+                                }
+                                .color.orange {
+                                    background: #F39C12!important;
+                                    color: #fff;
+                                }
+                            }
+                        }
+                    }
+                    .product-size {
+                        padding: 25px 0;
+                        ul.size-name {
+                            .ul-temp;
+                            li {
+                                margin: 0; 
+                                padding: 0 5px;
+                                float: left;
+                                a.btn-size {
+                                    margin-bottom: 5px;
+                                    margin-right: 5px;
+                                    color: #333;
+                                    background-color: #fff;
+                                    border: 1px solid #ccc;
+                                    .a-temp;
+                                    padding: 1px 5px;
+                                    border-radius: 3px;
+                                    font-size: 12px;
+                                }
+                                a.btn-size:hover {
+                                    background-color: #e6e6e6;
+                                    border-color: #adadad;
+                                }
+                            }
+                        }
+                    }
+                    .product-price {
+                        margin-top: 50px;
+                        padding: 5px 10px;
+                        background-color: #FFF;
+                        text-align: left;
+                        border: 2px dashed #E0E0E0; 
+                        .price {
+                            color: #26B99A;
+                            margin: 0;
+                            font-weight: 400;
+                        }
+                        .price-tax {
+                            font-size: 18px;
+                        }
+                    }
+                    .product-btnadd {
+                        margin-top: 25px;
+                        .add-to-cart {
+                            margin-bottom: 5px;
+                            margin-right: 5px;
+                            color: #333;
+                            background-color: #fff;
+                            border: 1px solid #ccc;
+                            padding: 10px 16px;
+                            border-radius: 5px;
+                            font-size: 18px;
+                            .a-temp;
+                        }
+                        .add-to-cart:hover {
+                            background-color: #e6e6e6;
+                            border-color: #adadad;
+                        }
+                    }
+                    .product-social {
+                        margin-top: 35px;
+                        ul.list-social {
+                            .ul-temp;
+                            li {
+                                float: left;
+                                padding: 0 4px;
+                                margin: 0;
+                                a {
+                                    color: #5A738E;
+                                    i {
+                                        font-size: 35px;
+                                    }
+                                }
+                                a:hover {
+                                    color: #337ab7;
+
+                                }
+                            }
+                        }
+                    }                    
+                }
+                ul.nav-tabs {
+                    margin-top: 25px;
+                    padding-left: 10px;
+                    background: #F5F7FA;
+                    li {
+                        color: #333!important;
+                        background: #F5F7FA;
+                        border-bottom: none;
+                        border-radius: 4px 4px 0 0;
+                        a {
+                            color: #5A738E;
+                        }
+                    }
+                }
+                .tab-content {
+                    padding: 10px 0;
+                }
             }
         }
+    }
+}
+.ul-temp {
+    padding-left: 0;
+    margin-left: -5px;
+    list-style: none;
+}
+.a-temp {
+    text-decoration: none;
+}
+
+@media (max-width: 980px) {
+    .content {
+        .content-left {
+            h3 {
+                font-size: 16px;
+            }
+        }
+        .content-right {
+            margin-top: -5px;
+        }
+    }
+    .product-name {
+        h3 {
+            display: inline-block;
+        }        
     }
 }
